--- a/repo/index.html
+++ b/repo/index.html
@@ -1,1 +1,2 @@
-<a href="ADDON_ID_HERE-VERSION_NUMBER_HERE.zip">ADDON_ID_HERE-VERSION_NUMBER_HERE.zip</a>
+<a href="repo.redreaper5820-v1.0.zip">repo.redreaper5820-v1.0.zip</a>
+<a href="skin.avi.koDroidTV-v4.0.zip">skin.avi.koDroidTV-v4.0..zip</a>
