--- a/zips/index.html
+++ b/zips/index.html
@@ -1,2 +1,2 @@
-<p><a href="repo.redreaper5820-v1.0.zip">repo.redreaper5820-v1.0.zip</a></p>
-<a href="skin.avi.koDroidTV-v4.0.zip">skin.avi.koDroidTV-v4.0..zip</a>
+<p><a href="repo.redreaper5820.zip">repo.redreaper5820.zip</a></p>
+<a href="skin.avi.koDroidTV.zip">skin.avi.koDroidTV.zip</a>
