--- a/repo/index.html
+++ b/repo/index.html
@@ -1,2 +1,2 @@
-<a href="repo.redreaper5820-v1.0.zip">repo.redreaper5820-v1.0.zip</a>
-<a href="skin.avi.koDroidTV-v4.0.zip">skin.avi.koDroidTV-v4.0..zip</a>
+<a href="repo.redreaper5820.zip">repo.redreaper5820.zip</a>
+<a href="skin.avi.koDroidTV.zip">skin.avi.koDroidTV.zip</a>
